<resources>
    <string name="app_name">Registro</string>
    <string name="et_usu">Usuario</string>
    <string name="et_pas">Contraseña</string>
    <string name="btn_ing">INGRESAR</string>
    <string name="et_codi">Cod. Estudiante</string>
    <string name="et_ape">Apellidos</string>
    <string name="et_nomb">Nombres</string>
    <string name="et_ema">E-mail</string>
    <string name="et_sem">Semestre</string>
    <string name="et_tur">Turno</string>
</resources>
