<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Cformulario"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Ingresar datos"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_codigo"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_codi"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_buscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="buscar"
                android:text="BUSCAR" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_ape"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_nomb"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_ema"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_semestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_sem"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_turno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_tur"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="guardar"
                android:text="GUARDAR" />

            <Button
                android:id="@+id/btn_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="editar"
                android:text="EDITAR" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_mostrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="mostrar"
                android:text="MOSTRAR" />

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="eliminar"
                android:text="ELIMINAR" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="salir"
            android:text="SALIR" />

    </LinearLayout>

</RelativeLayout>